--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="icarus.app.emergencyapp">
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -9,6 +13,10 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="emergencyapp"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCL5FXiUQhd2qqSiWil-9iN5s9eJ_ifOIA"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
