--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   google_maps_flutter: ^0.5.33
+  permission: ^0.1.7
+
 
 
 dev_dependencies:
